--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
     "prettier": "3.3.3",
+    "tailwindcss": "^3.4.12",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
