--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "use-callback-ref": "^1.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
