--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.6.0",
+    "@typescript-eslint/parser": "^8.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "use-callback-ref": "^1.3.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.11.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
+    "eslint": "^9.11.0",
+    "eslint-plugin-react": "^7.36.1",
     "globals": "^15.9.0",
     "husky": "^9.1.6",
     "lint-staged": "^15.2.10",
@@ -27,6 +32,7 @@
     "prettier": "3.3.3",
     "tailwindcss": "^3.4.12",
     "typescript": "^5.5.3",
+    "typescript-eslint": "^8.6.0",
     "vite": "^5.4.1"
   },
   "lint-staged": {
