--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "@typescript-eslint/eslint-plugin": "^8.46.3",
     "@typescript-eslint/parser": "^8.46.3",
+    "markdown-to-jsx": "^8.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "use-callback-ref": "^1.3.3"
