--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "markdown-to-jsx": "^8.0.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "use-callback-ref": "^1.3.3"
+    "use-callback-ref": "^1.3.3",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
