--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "markdown-to-jsx": "^9.5.3",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
+    "react-router": "^7.12.0",
     "use-callback-ref": "^1.3.3",
     "zustand": "^5.0.9"
   },
